--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-test
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Publications and Achievements</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: rgba(0, 0, 0, 0.0);
+            margin: 0;
+            padding: 20px;
+        }
+        .publication-section {
+            margin-bottom: 30px;
+        }
+        .publication-item {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        .publication-item h3 {
+            font-size: 18px;
+            color: #333;
+            margin-top: 0;
+            margin-bottom: 10px;
+            line-height: 1.4;
+        }
+        .publication-item p {
+            margin: 0;
+            color: #666;
+            line-height: 1.6;
+        }
+        .publication-item .date {
+            color: #888;
+            font-style: italic;
+        }
+        .publication-item a {
+            color: #3498db; /* リンクの色を青に設定 */
+            text-decoration: none; /* 下線を消す */
+            font-weight: bold; /* 太字にする */
+        }
+        .publication-item a:hover {
+            text-decoration: underline; /* ホバー時に下線を表示 */
+        }
+        .publication-section-title {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        @media (max-width: 768px) {
+            .publication-item {
+                padding: 15px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="publication-section">
+        <div class="publication-section-title">Journal</div>
+        <div class="publication-item">
+            <h3>Wave dynamics intrinsic in symmetric four-channel bilateral teleoperation: Mutual impedance-based motion control</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>Mechatronics</i><br>Vol. 102, p. 103209, October 2024. <a href="https://doi.org/10.1016/j.mechatronics.2024.103209" target="_blank">DOI</a></p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Modal Space Control of Bilateral System with Elasticity for Stable Contact Motion</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>IEEJ Journal of Industry Applications</i><br>Vol. 12, No. 2, pp. 131-144, March 2023. <a href="https://doi.org/10.1541/ieejjia.22004614" target="_blank">DOI</a></p>
+        </div>
+    </div>
+
+    <div class="publication-section">
+        <div class="publication-section-title">International Conference</div>
+
+        <div class="publication-item">
+            <h3>A Comparative Study of Vibration Damping Based on Wave Model—Decoupling Reflected Waves from Traveling Waves</h3>
+            <p>Kosuke Shikata, Krzysztof Szabat, and Seiichiro Katsura<br><i>The 27th International Conference on Electrical Machines and Systems (ICEMS 2024)</i><br>Fukuoka, Japan, November 2024. (Accepted)</p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Hybrid Velocity/Force Filtered Integral-Proportional Control for Damping of Torsional Vibration</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>21st International Conference on Power Electronics and Motion Control (IEEE-PEMC2024)</i><br>Pilsen, Czech Republic, October 2024. (Accepted)</p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Hierarchical Control for Vibration Suppression Through Decoupling of Traveling/Reflected Waves</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>49th Annual Conference of the IEEE Industrial Electronics Society (IECON 2023)</i><br>Singapore, October 2023, pp. 1-6. <a href="https://doi.org/10.1109/IECON51785.2023.10312496" target="_blank">DOI</a></p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Vibration Suppression Control Tolerant to Inertial Variations Based on Transformation to Traveling/Reflected Wave Basis</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>SICE Annual Conference 2023</i><br>Mie, Japan, September 2023, pp. 821-826.</p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Mutual Impedance-Based Force/Velocity Transmission Improvement for Bilateral Teleoperation</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>22nd World Congress of the International Federation of Automatic Control (IFAC World Congress 2023)</i><br>Yokohama, Japan, July 2023, pp. 9992-9997. <a href="https://doi.org/10.1016/j.ifacol.2023.10.712" target="_blank">DOI</a></p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Disturbance-Observer-Based Admittance Control and Its Application to Safe Contact Regulation</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>2023 IEEE/ASME International Conference on Advanced Intelligent Mechatronics (AIM)</i><br>Seattle, WA, USA, June 2023, pp. 311-316. <a href="https://doi.org/10.1109/AIM46323.2023.10196292" target="_blank">DOI</a></p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Controller Design Considering Intrinsic Wave System for Four-Channel Bilateral Teleoperation</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>3rd International Symposium on Applied Abstraction and Integrated Design (AAID2023)</i><br>Yokohama, Japan, March 2023, pp. 22-27.</p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Reflected Wave Control for Generating Impact Motion Using a Flexible Manipulator</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>48th Annual Conference of the IEEE Industrial Electronics Society (IECON2022)</i><br>Brussels, Belgium, October 2022, pp. 1-6. <a href="https://doi.org/10.1109/IECON49645.2022.9969005" target="_blank">DOI</a></p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Impact Motion of a Flexible Manipulator Based on Reflected Wave Control</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>SICE Annual Conference 2022</i><br>Kumamoto, Japan, September 2022, pp. 1265-1269.</p>
+        </div>
+
+        <div class="publication-item">
+            <h3>Vibration Suppression for Bilateral System with Resonance</h3>
+            <p>Kosuke Shikata and Seiichiro Katsura<br><i>8th IEEJ International Workshop on Sensing, Actuation, Motion Control, and Optimization (SAMCON2022)</i><br>Saitama, Japan, March 2022, pp. 526-527.</p>
+        </div>
+    </div>
+</body>
+</html>
