--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
         </div>
 
         <div class="publication-item">
+            <h3>Structuring a Model to Estimate Human Joint Motion from Surface-Electromyography</h3>
+            <p>Daiki Sodenaga, Kosuke Shikata, Issei Takeuchi, Daswin De Silva, and Seiichiro Katsura<br><i>50th Annual Conference of the IEEE Industrial Electronics Society (IECON 2024)</i><br>Chicago, IL, USA, October 2024. (Accepted)</p>
+        </div>
+        
+        <div class="publication-item">
             <h3>Hybrid Velocity/Force Filtered Integral-Proportional Control for Damping of Torsional Vibration</h3>
             <p>Kosuke Shikata and Seiichiro Katsura<br><i>21st International Conference on Power Electronics and Motion Control (IEEE-PEMC2024)</i><br>Pilsen, Czech Republic, October 2024. (Accepted)</p>
         </div>
